--- a/client/stylesheets/_app-variables.scss
+++ b/client/stylesheets/_app-variables.scss
@@ -1,3 +1,13 @@
 // Add Custom/Override Variables Here:
-$positive: #DE4F4F;
+//$positive: #2E64FE;
 $loading-font-size: 22px;
+
+//$light:                           #fff !default;
+//$stable:                          #f8f8f8 !default;
+//$positive:                        #4a87ee !default;
+//$calm:                            #43cee6 !default;
+//$balanced:                        #66cc33 !default;
+//$energized:                       #f0b840 !default;
+//$assertive:                       #ef4e3a !default;
+//$royal:                           #8a6de9 !default;
+//$dark:                            #444 !default;
