added browse tab

--- a/client/templates/browse/browse.html
+++ b/client/templates/browse/browse.html
@@ -1,4 +1,4 @@
-<template name="recent">
+<template name="browse">
 
   {{#contentFor "headerButtonLeft"}}
     <button class="button button-clear pull-left button-positive" data-ion-modal="search">
@@ -13,7 +13,7 @@
   {{/contentFor}}
 
   {{#contentFor "headerTitle"}}
-    <h1 class="title">My Events</h1>
+    <h1 class="title">Skedjoo</h1>
   {{/contentFor}}
 
   {{#ionView}}
