--- a/client/templates/layouts/appLayout.html
+++ b/client/templates/layouts/appLayout.html
@@ -9,15 +9,17 @@
 
     {{#if isAndroid}}
       {{#ionTabs style="android"}}
-        {{> ionTab title="Trending" path="trending" icon="android-star"}}
-        {{> ionTab title="Recent" path="recent" icon="android-time"}}
+        {{> ionTab title="Favorites" path="trending" icon="android-star"}}
+        {{> ionTab title="Browse" path="browse" icon="android-search"}}
+        {{> ionTab title="My Events" path="recent" icon="android-time"}}
         {{> ionTab title="Notifications" path="notifications" icon="android-notifications"}}
         {{> ionTab title="Profile" path="profile" icon="android-happy"}}
       {{/ionTabs}}
     {{else}}
       {{#ionTabs style="ios"}}
-        {{> ionTab title="Trending" path="trending" iconOff="ios-bolt-outline" iconOn="ios-bolt" class="tab-item-positive"}}
-        {{> ionTab title="Recent" path="recent" iconOff="ios-clock-outline" iconOn="ios-clock" class="tab-item-positive"}}
+        {{> ionTab title="Favorites" path="trending" iconOff="ios-star-outline" iconOn="ios-star" class="tab-item-positive"}}
+        {{> ionTab title="Browse" path="browse" iconOff="ios-search" iconOn="ios-search-strong" class="tab-item-positive"}}
+        {{> ionTab title="My Events" path="recent" iconOff="ios-clock-outline" iconOn="ios-clock" class="tab-item-positive"}}
         {{> ionTab title="Notifications" path="notifications" iconOff="ios-bell-outline" iconOn="ios-bell" class="tab-item-positive"}}
         {{> ionTab title="Profile" path="profile" iconOff="ios-person-outline" iconOn="ios-person" class="tab-item-positive"}}
       {{/ionTabs}}
