--- a/client/templates/trending/trending.html
+++ b/client/templates/trending/trending.html
@@ -13,7 +13,7 @@
   {{/contentFor}}
 
   {{#contentFor "headerTitle"}}
-    <h1 class="title">Trending</h1>
+    <h1 class="title">Skedjoo</h1>
   {{/contentFor}}
 
   {{#ionView}}
