changed template services to show relevent data

--- a/client/templates/products/_voteButton.html
+++ b/client/templates/products/_voteButton.html
@@ -1,6 +1,5 @@
 <template name="_voteButton">
   <button class="button button-stable vote-button {{hasVotedClass}}">
-    {{> ionIcon icon="arrow-up-c" }}
-    {{numberOfVotes}}
+    {{> ionIcon icon="star" }}
   </button>
 </template>
