enabled remove from favorites on click

--- a/client/templates/products/productsShow.html
+++ b/client/templates/products/productsShow.html
@@ -40,7 +40,7 @@
           {{/ionItem}}
 
           <div class="padding product-detail-upvotes">
-            <h5>Upvotes <small>{{numberOfVotes}}</small></h5>
+            <h5>Followers <small>{{numberOfVotes}}</small></h5>
             {{#each voters}}
               <a href="{{pathFor 'users.show'}}">
                 {{> avatar user=this size="small" shape="circle"}}
