changed profile tab to settings tab

--- a/client/templates/browse/browse.html
+++ b/client/templates/browse/browse.html
@@ -7,7 +7,7 @@
   {{/contentFor}}
 
   {{#contentFor "headerTitle"}}
-    <h1 class="title">Browse</h1>
+    <h1 class="title">Discover</h1>
   {{/contentFor}}
 
   {{#ionView}}
