--- a/client/templates/profile/profile.html
+++ b/client/templates/profile/profile.html
@@ -8,18 +8,14 @@
   {{/if}}
 
   {{#contentFor "headerTitle"}}
-    <h1 class="title">Profile</h1>
+    <h1 class="title">Settings</h1>
   {{/contentFor}}
 
   {{#ionView}}
     {{#ionContent}}
       {{#with user}}
         {{> _profileHeader}}
-        {{#ionList}}
-          {{#each votedProducts}}
-            {{> _productItem product=this path="products.show"}}
-          {{/each}}
-        {{/ionList}}
+        
       {{else}}
         <div class="empty-view">
           {{> ionIcon icon="ios-person"}}
